# SturdyEngine

./: Build.bat  CMakeLists.txt  LICENSE  Main.cpp  README.md  SturdyEngine.h  compileAndCopyShaders.bat
cpuinfo/: cpuinfo.h  cpuinfoARM.h  cpuinfox86.h
includelib/: output.txt
shaders/: compileShaders.bat
